--- a/index.html
+++ b/index.html
@@ -6,6 +6,36 @@
     <title>Web Calculator</title>
 </head>
 <body>
+    <div class="container">
+        <div class="display">Result will be displayed here</div>
+        <div class="panel">
+            <div class="row">
+                <button class="button">1</button>
+                <button class="button">2</button>
+                <button class="button">3</button>
+                <button class="button">+</button>
+            </div>
+            <div class="row">
+                <button class="button">4</button>
+                <button class="button">5</button>
+                <button class="button">6</button>
+                <button class="button">-</button>
+            </div>
+            <div class="row">
+                <button class="button">7</button>
+                <button class="button">8</button>
+                <button class="button">9</button>
+                <button class="button">/</button>
+            </div>
+            <div class="row">
+                <button class="button">Clear</button>
+                <button class="button">0</button>
+                <button class="button">*</button>
+                <button class="button">=</button>
+            </div>
+        </div>
+    </div>
+
     <script src="./calculator.js"></script>
 </body>
 </html>
