--- a/index.html
+++ b/index.html
@@ -4,10 +4,59 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Calculator</title>
+    <style>
+        /**{
+            border: 2px solid darkolivegreen;
+        }*/ 
+        body{
+            background-color: rgb(24, 41, 41);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin: 0;
+            padding: 0;
+        }
+
+        .container{
+            background-color: darkslategrey;
+            width: 800px;
+            height: 700px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .display{
+            background-color: rgb(57, 107, 109);
+            width: 750px;
+            /*height: 200px;*/
+            margin: 20px 0;
+            flex: 1;
+        }
+
+        .panel{
+            width: 750px;
+            flex: 1;
+            display: flex;
+            flex-direction: column;
+        }
+
+        .row{
+            flex: 1;
+            display: flex;
+            justify-content: space-evenly;
+        }
+
+        .button{
+            flex: 1;
+            background-color: cadetblue;
+        }
+    </style>
 </head>
 <body>
     <div class="container">
-        <div class="display">Result will be displayed here</div>
+        <div class="display"></div>
         <div class="panel">
             <div class="row">
                 <button class="button">1</button>
